# filament

./: .gitignore  CLAUDE.md  DEPLOY.md  ORCHESTRATION.md  README.md
.claude/: launch.json  settings.local.json
.claude/agents/: ui-ux-qa-reviewer.md
.claude/skills/ui-ux-qa/: SKILL.md  checklist.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  BACKEND_GUIDE.md  BACKEND_PIPELINE.md  COHESIVE_DESIGN.md  DESIGN_DECISIONS.md  DESIGN_SYSTEM.md  LOW_LEVEL_DESIGN.md  PRODUCTION_READINESS.md  ROADMAP.md  SYSTEM_ARCHITECTURE_PROPOSAL.docx  SYSTEM_DESIGN.md  TECH_STACK.md  UPDATES.md
engine/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  alembic.ini  fly.toml  openapi.json  pyproject.toml
engine/data/floor/: README.md  notes.json
engine/data/golden/: notes.json
engine/db/: schema.sql
engine/migrations/: env.py
engine/migrations/versions/: 0001_init.py  0002_engine_backend.py  0003_api_tables.py  0004_api_notes_tags.py  0005_topical_cache.py  0006_api_user_id.py  0007_jobs.py  0008_observability.py  0009_rls.py
engine/src/kg_api/: __init__.py  broker.py  deps.py  main.py  queue.py  repo.py  schemas.py  spend_gate.py  telemetry.py  worker.py
engine/src/kg_engine/: __init__.py  cli.py  config.py  eval.py  extract.py  index.py  models.py  pg_backend.py  pipeline.py  prompts.py  providers.py  reason.py  retrieve.py  router.py  store.py  verify.py
engine/tests/: test_api.py  test_api_pg.py  test_pg_backend.py  test_pipeline.py
engine/tests/integration/: test_tenancy_leak.py
frontend/: CLAUDE.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/graph/: page.tsx
frontend/app/new/: page.tsx
frontend/app/notes/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/app/organize/: loading.tsx  page.tsx
frontend/app/product/: page.tsx
frontend/app/signin/: page.tsx
frontend/components/: AppShell.tsx  BrandMark.tsx  CommandPalette.tsx  CommandPaletteHint.tsx  ConnectedNoteCard.tsx  ConnectionCard.tsx  ConnectionCountBadge.tsx  ConnectionsPanel.tsx  FindConnectionsButton.tsx  FirstInsightCallout.tsx  GraphView.tsx  HeroField.tsx  MarketingFooter.tsx  MarketingHeader.tsx  MarketingNav.tsx  NoteCard.tsx  NoteEditor.tsx  OrganizeView.tsx  ReadBlocks.tsx  TagInput.tsx  ThreadCard.tsx  TopNav.tsx  Topbar.tsx
frontend/lib/: api-types.ts  fixtures.ts  import.ts  store.ts
skills/: eval-gate.sh  regenerate-api-types.sh  run-migration.sh  scaffold-route.py  ui-capture.mjs  visual-check.mjs
(+9 files in other folders)
