[project]
name = "kg-engine"
version = "0.0.1"
description = "Structural cross-domain connection engine (headless v0)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1", "pgvector>=0.2"]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
kg-engine = "kg_engine.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
