[project]
name = "kg-engine"
version = "0.0.1"
description = "Structural cross-domain connection engine (headless v0)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
postgres = ["psycopg[binary,pool]>=3.2", "pgvector>=0.3", "alembic>=1.13", "SQLAlchemy>=2.0"]
anthropic = ["anthropic>=0.40"]
api = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
kg-engine = "kg_engine.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
