[project]
name = "kg-engine"
version = "0.0.1"
description = "Structural cross-domain connection engine (headless v0)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
postgres = ["psycopg[binary,pool]>=3.2", "pgvector>=0.3", "alembic>=1.13", "SQLAlchemy>=2.0"]
anthropic = ["anthropic>=0.40"]
api = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]
worker = ["dramatiq[redis]>=1.17"]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.11"]

[project.scripts]
kg-engine = "kg_engine.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# strict on the engine core; the api/worker glue is checked but not strict yet
files = ["src/kg_engine"]
disallow_untyped_defs = false
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
